--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "10.x"
   },
   "scripts": {
-    "test": "test",
+    "test": "jest",
     "tsc": "tsc",
     "x": "tsc src/main.ts && node src/main.js && rm src/*.js"
   },
@@ -24,7 +24,11 @@
   "license": "MIT",
   "devDependencies": {
     "@types/cli-progress": "^3.11.5",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
