--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "npm": "10.x"
   },
   "scripts": {
-    "test": "jest",
+    "test": "vitest",
     "tsc": "tsc",
     "mine-GPS": "tsc && node src/mine-GPS.js && rm src/*.js",
     "i18n-1": "tsc && node src/i18n-1.js && rm src/*.js",
@@ -28,12 +28,10 @@
   "license": "MIT",
   "devDependencies": {
     "@types/cli-progress": "^3.11.5",
-    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.3.1"
   },
   "dependencies": {
     "cli-progress": "^3.12.0",
