Update test.yml to fix a possbile issue in YML

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,13 @@
-name: test
+name: Unit test
 on: [push, pull_request]
 jobs:
-  check-bats-version:
+  install-and-run-tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: '20'
-      - run: npm install
+          node-version: '20.x'
+      - run: npm ci
       - run: npm run test
