- create vitest config file - add 'User-Agent' header to HTTP request so that wikidata will work (see https://meta.wikimedia.org/wiki/User-Agent_policy for more info)

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "npm": "10.x"
   },
   "scripts": {
-    "test": "vitest run",
-    "test-dev": "vitest dev",
+    "test": "vitest",
+    "test-2": "vitest run",
     "tsc": "tsc",
     "mine-GPS": "tsc && node src/mine-GPS.js && rm src/*.js",
     "i18n-1": "tsc && node src/i18n-1.js && rm src/*.js",
