#1 fix Turkey data and add tests for them - follow Turkey map while adding places in GPS-data.json - create new script to update translations from GPS-data - skip Turkey, Turkish while translating - return region name for City 'Merkez' for Turkey - create and reuse `addToData` function while adding GPS data - prune regions without city before writing data to file

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "i18n-1": "tsc && node src/i18n-1.js && rm src/*.js",
     "i18n-2": "tsc && node src/i18n-2.js && rm src/*.js",
     "i18n-3": "tsc && node src/i18n-3.js && rm src/*.js",
-    "del-js": "rm src/*.js"
+    "del-js": "rm src/*.js",
+    "prune-data": "tsc && node src/prune-generated-data.js && rm src/*.js"
   },
   "keywords": [
     "script",
