--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "i18n-2": "tsc && node src/i18n-2.js && rm src/*.js",
     "i18n-3": "tsc && node src/i18n-3.js && rm src/*.js",
     "del-js": "rm src/*.js",
-    "prune-data": "tsc && node src/prune-generated-data.js && rm src/*.js"
+    "prune-data": "tsc && node src/prune-generated-data.js && rm src/*.js",
+    "enrich-gps": "tsc && node src/add-country-region-gps.js && rm src/*.js"
   },
   "keywords": [
     "script",
